@@ -28,8 +28,48 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	testImplementation 'org.testcontainers:testcontainers:1.19.1'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+}
+
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += main.output + test.output
+			runtimeClasspath += main.output + test.output
+			srcDir file('src/test/java')
+		}
+	}
+}
+
+configurations {
+	integrationTestCompile.extendsFrom testCompile
+	integrationTestRuntime.extendsFrom testRuntime
+	integrationTestImplementation.extendsFrom testImplementation
+}
+
+tasks.register('integrationTest', Test) {
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
+
+	description = 'Runs integration tests.'
+	group = 'verification'
+	useJUnitPlatform()
+	filter {
+		include '**/*IntegrationTest.*'
+	}
 }
 
 tasks.named('test') {
+	filter {
+		exclude '**/*IntegrationTest.*'
+	}
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
